@@ -1,2 +1,2 @@
 .precomp/
-/CSV-AutoClass-*
+/CSV-Autoclass-*
