@@ -20,7 +20,7 @@
   },
   "resources": [
   ],
-  "source-url": "https://github.com/tbrowder/CSV-AutoClass.git",
+  "source-url": "https://github.com/tbrowder/CSV-Autoclass.git",
   "tags": [
     "csv class auto-build object text txt"
   ],
