@@ -2,19 +2,17 @@
 
 =head1 NAME
 
-B<CSV-AutoClass> - Define a class with a CSV file and provide data for a list of class objects in the same file
+B<CSV-Autoclass> - Define a class with a CSV file and provide data for a list of class objects in the same file
 
 =head1 SYNOPSIS
 
 =begin code :lang<raku>
-
-use CSV-AutoClass;
-
+use CSV-Autoclass;
 =end code
 
 =head1 DESCRIPTION
 
-B<CSV-AutoClass> is a module with two accompanying programs. For
+B<CSV-Autoclass> is a module with two accompanying programs. For
 each program, execute it without any arguments to see instructions.
 
 =begin item 
@@ -36,8 +34,8 @@ as an argument to C<csv2class>.
 C<use-class>
 
 Uses a CSV file with class data to list all the data. 
-It uses C<CSV-AutoClass> routines provided for interrogating any 
-suitable list of C<CSV-AutoClass>-defined objects.
+It uses C<CSV-Autoclass> routines provided for interrogating any 
+suitable list of C<CSV-Autoclass>-defined objects.
 It can be used as a template for creating programs that
 manipulate any CSV file with the same header attributes as 
 one of the generated classes.
